--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <EditText
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="Enter birth year"
+        android:hint="ENTER THE YEAR"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,10 +40,10 @@
 
     <Button
         android:id="@+id/btnGetAge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Get age"
+        android:layout_width="115dp"
+        android:layout_height="89dp"
         android:background="@color/colorAccent"
+        android:text="Get age"
         android:textColor="@android:color/white"
         tools:layout_editor_absoluteX="284dp"
         tools:layout_editor_absoluteY="306dp" />
