--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,6 +11,10 @@
         android:id="@+id/etBirth"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="108dp"
+        android:layout_marginBottom="372dp"
         android:ems="10"
         android:hint="ENTER THE YEAR"
         android:inputType="textPersonName"
@@ -32,20 +36,30 @@
 
     <TextView
         android:id="@+id/tvAge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="your age is"
+        android:layout_width="167dp"
+        android:layout_height="63dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="130dp"
+        android:layout_marginBottom="450dp"
+        android:text="Your Age is"
+        android:textColor="#536dfe"
+        android:textSize="25dp"
         tools:layout_editor_absoluteX="160dp"
         tools:layout_editor_absoluteY="243dp" />
 
     <Button
         android:id="@+id/btnGetAge"
-        android:layout_width="115dp"
-        android:layout_height="89dp"
-        android:background="@color/colorAccent"
+        android:layout_width="180dp"
+        android:layout_height="71dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="127dp"
+        android:layout_marginBottom="280dp"
+        android:background="#dd2c00"
         android:text="Get age"
         android:textColor="@android:color/white"
         tools:layout_editor_absoluteX="284dp"
         tools:layout_editor_absoluteY="306dp" />
 
-</LinearLayout>
+</RelativeLayout>
